Issue#SB-21097 Need to hide Scrollbar on right side

--- a/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
+++ b/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
@@ -3,6 +3,7 @@
         height: 100vh;
         padding: 0;
         border-radius: 0;
+        overflow: hidden;
     }
 
     iframe {
